// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel plugin should find all the types of Components 1`] = `
<div>
  <ClassComponent>
    <div
      data-a8f769be={true}
    />
  </ClassComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 2`] = `
<div>
  <ArrowFunctionalComponent>
    <div
      data-f49764c6={true}
    />
  </ArrowFunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 3`] = `
<div>
  <FunctionalComponent>
    <p
      data-b5d7faff={true}
    />
  </FunctionalComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 4`] = `
<div>
  <ComposedComponent>
    <Button
      data-8e388bfc={true}
    >
      <button
        data-8e388bfc={true}
      />
    </Button>
  </ComposedComponent>
</div>
`;

exports[`babel plugin should find all the types of Components 5`] = `
<div>
  <ComponentWithAttrs>
    <div
      data-889909b2={true}
      data-test="testme"
    />
  </ComponentWithAttrs>
</div>
`;

exports[`babel plugin should find nested Component 1`] = `
<ClassComponent>
  <div
    data-a8f769be={true}
  >
    <ArrowFunctionalComponent>
      <div
        data-f49764c6={true}
      >
        <FunctionalComponent>
          <p
            data-b5d7faff={true}
          >
            <ComposedComponent>
              <Button
                data-8e388bfc={true}
              >
                <button
                  data-8e388bfc={true}
                />
              </Button>
            </ComposedComponent>
          </p>
        </FunctionalComponent>
      </div>
    </ArrowFunctionalComponent>
  </div>
</ClassComponent>
`;

exports[`babel plugin should save Component\`s root attrs 1`] = `
<ComponentWithAttrs>
  <div
    data-889909b2={true}
    data-test="testme"
  />
</ComponentWithAttrs>
`;

exports[`babel plugin should save Component\`s root attrs 2`] = `
DOMStringMap {
  "889909b2": "true",
  "test": "testme",
}
`;

exports[`babel plugin transform should transform source code depends on the env option 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable react/prefer-stateless-function */
const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-c7b7156f\\": process.env.RESELECTOR === \\"true\\"
}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testId = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-a8f769be\\": process.env.RESELECTOR === \\"true\\"
    }, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testId = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-f49764c6\\": process.env.RESELECTOR === \\"true\\"
}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testId = \\"f49764c6\\";

function FunctionalComponent({
  children
}) {
  return _react.default.createElement(\\"p\\", {
    \\"data-b5d7faff\\": process.env.RESELECTOR === \\"true\\"
  }, children);
}

FunctionalComponent.testId = \\"b5d7faff\\";

const ComposedComponent = ({
  children
}) => _react.default.createElement(Button, {
  \\"data-8e388bfc\\": process.env.RESELECTOR === \\"true\\"
}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testId = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  \\"data-889909b2\\": process.env.RESELECTOR === \\"true\\"
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testId = \\"889909b2\\";

var _default = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-5f9b51d4\\": process.env.RESELECTOR === \\"true\\"
}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testId = \\"5f9b51d4\\";
}"
`;

exports[`babel plugin transform should transform source code well for development 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.FunctionalComponent = FunctionalComponent;
exports.default = exports.ComponentWithAttrs = exports.ComposedComponent = exports.ArrowFunctionalComponent = exports.ClassComponent = void 0;

var _react = _interopRequireDefault(require(\\"react\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/* eslint-disable react/prefer-stateless-function */
const Button = props => _react.default.createElement('button', props, props.children);
/* eslint-disable no-unused-vars */


const UnexportComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-c7b7156f\\": true
}, children);
/* eslint-enable no-unused-vars */


UnexportComponent.testId = \\"c7b7156f\\";

class ClassComponent extends _react.default.Component {
  render() {
    return _react.default.createElement(\\"div\\", {
      \\"data-a8f769be\\": true
    }, this.props.children);
  }

}

exports.ClassComponent = ClassComponent;
ClassComponent.testId = \\"a8f769be\\";

const ArrowFunctionalComponent = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-f49764c6\\": true
}, children);

exports.ArrowFunctionalComponent = ArrowFunctionalComponent;
ArrowFunctionalComponent.testId = \\"f49764c6\\";

function FunctionalComponent({
  children
}) {
  return _react.default.createElement(\\"p\\", {
    \\"data-b5d7faff\\": true
  }, children);
}

FunctionalComponent.testId = \\"b5d7faff\\";

const ComposedComponent = ({
  children
}) => _react.default.createElement(Button, {
  \\"data-8e388bfc\\": true
}, children);

exports.ComposedComponent = ComposedComponent;
ComposedComponent.testId = \\"8e388bfc\\";

const ComponentWithAttrs = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-test\\": \\"testme\\",
  \\"data-889909b2\\": true
}, children);

exports.ComponentWithAttrs = ComponentWithAttrs;
ComponentWithAttrs.testId = \\"889909b2\\";

var _default = ({
  children
}) => _react.default.createElement(\\"div\\", {
  \\"data-5f9b51d4\\": true
}, children);

exports.default = _default;

if (module.exports) {
  module.exports.default.testId = \\"5f9b51d4\\";
}"
`;
